Removed Spring as it was too bloated
